--- a/06_DOM/one.html
+++ b/06_DOM/one.html
@@ -15,6 +15,7 @@
     <div>
         <h1 id="title" class="heading">DOM Learning on Chai aur Code</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, labore?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ipsum delectus quisquam consequatur. Illo molestiae animi non nemo tempora explicabo est, praesentium nesciunt adipisci ipsam delectus quibusdam, nostrum odio voluptates.</p>
     </div>
 </body>
 </html>
