Done with basic Manipulation of DOM

--- a/06_DOM/one.html
+++ b/06_DOM/one.html
@@ -13,9 +13,24 @@
 </head>
 <body  class="bg-black">
     <div>
-        <h1 id="title" class="heading">DOM Learning on Chai aur Code</h1>
+        <h1 id="title" class="heading">DOM Learning on Chai aur Code <span style="display: none;">
+            test text
+        </span></h1>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, labore?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita ipsum delectus quisquam consequatur. Illo molestiae animi non nemo tempora explicabo est, praesentium nesciunt adipisci ipsam delectus quibusdam, nostrum odio voluptates.</p>
+        <input type="password" name="" id="">
+
+        <ul>
+            <li class="list-item">one</li>
+            <li class="list-item">two</li>
+            <li class="list-item">three</li>
+            <li class="list-item">four</li>
+        </ul>
+        <!-- Suppose we want to change the colour first <li> tag -->
+        <!-- const myul = document.querySelector('ul') -->
+        <!-- ul.q -->
     </div>
 </body>
 </html>
