Some more code added

--- a/06_DOM/four.html
+++ b/06_DOM/four.html
@@ -45,6 +45,7 @@
     addLanguage("Chinese");
     addLanguage("Punjabi");
     addLanguage("Germany");
+    addLanguage("Korean");
 
 </script>
 </html>
