Creation of new div element completed

--- a/06_DOM/three.html
+++ b/06_DOM/three.html
@@ -48,11 +48,10 @@
 
         const addText = document.createTextNode(`${text}`);
         div.appendChild(addText);
-        document.body.appendChild(div);
+        document.body.appendChild(div); //Attaching a TextNode on browser
     }
 
     createNewDivElement("blue", "green", "DevilSandy", "Movie");
-
 
 </script>
 </html>
